<resources>
    <string name="app_name">Demo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kotlin</string>
    <string name="nav_header_subtitle">Demo samples</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_slideshow">Slideshow</string>
    <string name="cancel_demo">Job Cancel Handling</string>
    <string name="object_demo">Object Demo</string>
    <string name="companion_object_demo">Companion Object Demo</string>
    <string name="Extension_function_demo">Extension Function Demo</string>
    <string name="exception_demo">Job Exception Handling</string>
    <string name="higher_order_function_demo">Higher Order Function</string>
    <string name="global_scope_demo">Global Scope Function</string>
    <string name="run_blocking_demo">Run Blocking Function</string>
    <string name="co_routine_demo">Co-routine Scope Function</string>
    <string name="welcome">Welcome</string>


    <string name="text_error">Error</string>
    <string name="text_success">Success</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="text_yes">yes</string>
    <string name="message_one">You successfully did that thing!</string>
    <string name="message_error">Something went wrong…</string>
    <string name="message_succes">You successfully did that thing!</string>
    <string name="message_cancelled">Cancelled...</string>
    <string name="message_are_you_sure">Are you sure you want to do that? This can\'t be un-done.</string>
</resources>