<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_welcome"
            android:icon="@drawable/ic_welcome"
            android:title="@string/welcome" />
        <item
            android:id="@+id/nav_one"
            android:icon="@drawable/ic_one"
            android:title="@string/exception_demo" />
        <item
            android:id="@+id/nav_two"
            android:icon="@drawable/ic_two"
            android:title="@string/cancel_demo" />
        <item
            android:id="@+id/nav_three"
            android:icon="@drawable/ic_three"
            android:title="@string/object_demo" />

        <item
            android:id="@+id/nav_four"
            android:icon="@drawable/ic_four"
            android:title="@string/companion_object_demo" />

        <item
            android:id="@+id/nav_five"
            android:icon="@drawable/ic_five"
            android:title="@string/Extension_function_demo" />

        <item
            android:id="@+id/nav_six"
            android:icon="@drawable/ic_six"
            android:title="@string/higher_order_function_demo" />

        <item
            android:id="@+id/nav_seven"
            android:icon="@drawable/ic_seven"
            android:title="@string/global_scope_demo" />

        <item
            android:id="@+id/nav_eight"
            android:icon="@drawable/ic_eight"
            android:title="@string/run_blocking_demo" />

        <item
            android:id="@+id/nav_nine"
            android:icon="@drawable/ic_nine"
            android:title="@string/co_routine_demo" />
    </group>
</menu>