<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_welcome">

    <fragment
        android:id="@+id/nav_welcome"
        android:name="com.kotlin.demo.ui.WelcomeFragment"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_welcome" />

    <fragment
        android:id="@+id/nav_one"
        android:name="com.kotlin.demo.ui.DemoTwoFragment"
        android:label="@string/exception_demo"
        tools:layout="@layout/fragment_demo_two" />

    <fragment
        android:id="@+id/nav_two"
        android:name="com.kotlin.demo.ui.DemoOneFragment"
        android:label="@string/cancel_demo"
        tools:layout="@layout/fragment_demo_one" />
</navigation>